infra/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: trenches
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: http
